@@ -23,6 +23,15 @@ Change log next version
          appendRoot("%s.%s", withArgs("author")).
          body(withArgs("size()"), equalTo(4)); // The last argument defined in "appendRoot" is applied here
  (issue 267).
+* Added ability to log the request and response generated by the form authentication scheme, for example:
+    given().
+            auth().form("John", "Doe", springSecurity().withLoggingEnabled()).
+    when().
+            get("/formAuth").
+    then().
+            statusCode(200).
+            body(equalTo("OK"));
+  (issue 274).
 
 Change log 2.3.1 (2014-03-31)
 -----------------------------
